--- a/style.css
+++ b/style.css
@@ -263,6 +263,12 @@
   }
 }
 
+@media screen and (max-width: 364px#) {
+  .logo strong {
+    display: none;
+  }
+}
+
 
 @media screen and (max-width: 320px) {
   :root {
