--- a/style.css
+++ b/style.css
@@ -263,10 +263,15 @@
   }
 }
 
-@media screen and (max-width: 364px#) {
+@media screen and (max-width: 364px) {
   .logo strong {
     display: none;
   }
+
+  .logo {
+    font-size: 1.6rem;
+  }
+  
 }
 
 
